--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,6 +117,16 @@
     <!-- Spacer -->
     <div class="topbar-spacer"></div>
 
+    <button id="legendToggleDesktop" class="btn-legend-header">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
+        stroke-linecap="round" stroke-linejoin="round">
+        <rect x="3" y="3" width="18" height="18" rx="2" />
+        <line x1="3" y1="9" x2="21" y2="9" />
+        <line x1="9" y1="21" x2="9" y2="9" />
+      </svg>
+      Legend
+    </button>
+
     <!-- Action button -->
     <button id="btnSummary" class="btn-primary">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
@@ -136,6 +146,7 @@
   <!-- ===== MAP & CONTENT ===== -->
   <main class="main-content">
     <div id="map">
+
       <!-- Chart overlays (Desktop/Tablet) / Full-screen tab content (Mobile) -->
       <div id="chartsContainer" class="charts-view-container">
         <div class="chart-box chart-left">
@@ -146,6 +157,27 @@
         <div class="chart-box chart-right">
           <div class="chart-title" id="rightChartTitle">Right Summary</div>
           <canvas id="rightChart"></canvas>
+        </div>
+      </div>
+      <!-- Combined Legend Panel -->
+      <div id="mapLegendPanel" class="map-legend-panel">
+        <div class="legend-panel-header">
+          <span class="legend-panel-title">Map Legend</span>
+          <button class="legend-close-btn" onclick="toggleLegend()">&times;</button>
+        </div>
+        <div class="legend-section">
+          <div class="legend-section-title">
+            <span class="legend-dot-indicator" style="background:#4def8e"></span>
+            Left Layer
+          </div>
+          <div id="mapLegendLeft"></div>
+        </div>
+        <div class="legend-section">
+          <div class="legend-section-title">
+            <span class="legend-dot-indicator" style="background:#ff8a00"></span>
+            Right Layer
+          </div>
+          <div id="mapLegendRight"></div>
         </div>
       </div>
     </div>
@@ -170,6 +202,15 @@
         <line x1="6" y1="20" x2="6" y2="14" />
       </svg>
       <span>Report</span>
+    </button>
+    <button class="nav-item" id="navLegend" onclick="switchTab('legend')">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+        stroke-linecap="round" stroke-linejoin="round">
+        <rect x="3" y="3" width="18" height="18" rx="2" />
+        <line x1="3" y1="9" x2="21" y2="9" />
+        <line x1="9" y1="21" x2="9" y2="9" />
+      </svg>
+      <span>Legend</span>
     </button>
   </nav>
 
