เอาปุ้มปิด legend ออก

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -163,7 +163,7 @@
       <div id="mapLegendPanel" class="map-legend-panel">
         <div class="legend-panel-header">
           <span class="legend-panel-title">Map Legend</span>
-          <button class="legend-close-btn" onclick="toggleLegend()">&times;</button>
+          <!-- <button class="legend-close-btn" onclick="toggleLegend()">&times;</button> -->
         </div>
         <div class="legend-section">
           <div class="legend-section-title">
