--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,7 +128,7 @@
     </button>
 
     <!-- Action button -->
-    <button id="btnSummary" class="btn-primary">
+    <!-- <button id="btnSummary" class="btn-primary">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
         stroke-linecap="round" stroke-linejoin="round">
         <line x1="8" y1="6" x2="21" y2="6" />
@@ -139,7 +139,7 @@
         <line x1="3" y1="18" x2="3.01" y2="18" />
       </svg>
       Summary
-    </button>
+    </button> -->
 
   </header>
 
