กันไม่ให้ mobile tab อื้นขยับแผนที่

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,12 +151,20 @@
       <div id="chartsContainer" class="charts-view-container">
         <div class="chart-box chart-left">
           <div class="chart-title" id="leftChartTitle">Left Summary</div>
+          <div class="chart-area-info" id="leftAreaInfo"></div>
           <canvas id="leftChart"></canvas>
+          <div class="chart-footnote">
+            *ค่าตัวเลขได้มาจากการคำนวณด้วยระบบสารสนเทศทางภูมิศาสตร์
+          </div>
         </div>
 
         <div class="chart-box chart-right">
           <div class="chart-title" id="rightChartTitle">Right Summary</div>
+          <div class="chart-area-info" id="rightAreaInfo"></div>
           <canvas id="rightChart"></canvas>
+          <div class="chart-footnote">
+            *ค่าตัวเลขได้มาจากการคำนวณด้วยระบบสารสนเทศทางภูมิศาสตร์
+          </div>
         </div>
       </div>
       <!-- Combined Legend Panel -->
